step 8